--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@
   --Desaturated-Red: hsl(0, 36%, 70%);
   --Soft-Red: hsl(0, 93%, 68%);
   --Dark-Grayish-Red: hsl(0, 6%, 24%);
-  /* --gradient: 135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%);
-  --Gradient2: 135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%); */
+  --gradient: 135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%);
+  --Gradient2: 135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%);
 }
 
 html,
 body {
   margin: 0;
-  height: 100%;
+  /* height: 100%; */
+  /* min-height: 100vh; */
 }
 
 body {
@@ -17,41 +18,44 @@ body {
   flex-direction: column;
   font-family: "Josefin Sans", sans-serif;
   font-size: 16px;
-  background-color: hsl(252, 3%, 32%);
-  /* background-image: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%)); */
+  background-image: linear-gradient(
+    180deg,
+    hsl(0, 0%, 100%),
+    hsl(0, 100%, 98%)
+  );
+  /* border: 1px solid orange; */
 }
 
 .container {
   display: inherit;
   flex-direction: column;
   flex: 1 0 auto;
-  border: 2px solid chartreuse;
+  border: 2px dotted red;
 }
 
 .logo {
-  display: flex;
   padding: 35px 20px 35px 40px;
-  background-image: linear-gradient(
-    135deg,
-    hsl(0, 0%, 100%),
-    hsl(0, 100%, 98%)
-  );
-  border: 1px solid red;
+  border: 2px solid dodgerblue;
 }
 
 .logo img {
-  width: 8rem;
-  border: 1px solid fuchsia;
+  width: 7.5rem;
+  object-fit: cover;
+  /* border: 1px solid fuchsia; */
 }
 
 .hero-image {
   display: flex;
-  flex-wrap: wrap;
-  border: 1px solid cyan;
+  /* flex-wrap: wrap; */
+  border: 2px solid darkcyan;
 }
 
 .hero-image img {
   max-width: 100%;
+}
+
+.hero {
+  content: url("images/hero-mobile.jpg");
 }
 
 .content {
@@ -61,7 +65,7 @@ body {
   text-align: center;
   color: var(--Desaturated-Red);
   padding: 30px;
-  border: 1px solid fuchsia;
+  border: 2px solid dodgerblue;
 }
 
 .content h2 {
@@ -69,7 +73,6 @@ body {
   letter-spacing: 13px;
   text-transform: uppercase;
   font-weight: 300;
-  /* margin-bottom: 40px; */
   border: 1px solid blue;
 }
 
@@ -77,9 +80,9 @@ body {
   color: initial;
 }
 
-p {
+.content p {
   text-align: center;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .form {
@@ -91,17 +94,18 @@ p {
 
 .input-form {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
-  border: 2px dotted orange;
+  border-radius: 50px;
+  /* border: 2px dotted orange; */
 }
 
 input {
   flex: 2;
-  padding: 1.5em 1.5em;
-  border-radius: 50px;
+  padding: 1em 2em;
+  border-radius: inherit;
   border: 1px solid hsl(0, 36%, 70%);
   background: transparent;
+  /* border: 2px dotted orange; */
 }
 
 input::placeholder {
@@ -111,16 +115,53 @@ input::placeholder {
 .btn-submit {
   align-self: flex-end;
   position: absolute;
-  height: 4.5em;
-  width: 6em;
+  height: 3.3em;
+  width: 5em;
   margin-left: 0;
   background-image: linear-gradient(
     to right,
     hsl(0, 80%, 86%),
     hsl(0, 74%, 74%)
   );
+  box-shadow: 0 15px 20px 0 rgba(198, 110, 110, 0.25);
   border-radius: 50px;
   border: none;
+  /* border: 1px solid blue; */
+}
+
+.fa {
+  display: none;
+  align-self: flex-end;
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  margin: 0.4em 4.5em 0 0;
+  /* border: 1px solid green; */
+}
+
+.fa-exclamation-circle {
+  background-image: url("images/icon-error.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.message {
+  display: none;
+  /* display: flex; */
+  text-align: initial !important;
+  margin-top: 0;
+  color: var(--Soft-Red);
+  font-size: 13px;
+  padding-left: 1.7em;
+  padding-top: 0.5em;
+}
+
+.message-error {
+  display: block;
+}
+
+.fa-error {
+  display: initial;
 }
 
 footer {
@@ -138,4 +179,70 @@ footer {
 .attribution a {
   text-decoration: none;
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (min-width: 376px) {
+  body {
+    background-image: url("../images/bg-pattern-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 1024px) {
+  .hero-image {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    flex-direction: initial;
+  }
+
+  .logo {
+    position: absolute;
+  }
+
+  .hero-image {
+    order: 3;
+  }
+
+  .hero {
+    content: url("images/hero-desktop.jpg");
+  }
+
+  .content {
+    text-align: start;
+    justify-content: center;
+  }
+
+  .content h2 {
+    font-size: 3.5em;
+  }
+
+  .content p {
+    text-align: start;
+    border: 1px solid blue;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1150px) {
+  .content {
+    padding: 15em 4em 5em 4em;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  .content {
+    padding: 15em 5em 5em 5em;
+  }
+}
+
+@media screen and (min-width: 1220px) {
+  .content {
+    padding: 15em 10em 5em 8em;
+    /* padding: 15em 5em 5em 5em; */
+  }
 }
